# arxiv-paper-mcp

./: Dockerfile  README.md  pyproject.toml  smithery.yaml
arxiv_mcp/: __init__.py  app.py  server.py  utils.py
arxiv_mcp/prompts/: prompts.py
arxiv_mcp/resources/: resources.py
