[project]
name = "mcp-server-demo"
version = "0.1.0"
description = "arXiv 논문 데이터를 Claude AI와 연동하는 MCP 서버"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.6.0",
    "requests>=2.0.0",
    "beautifulsoup4>=4.0.0",
    "lxml>=4.0.0"
]

[project.scripts]
arxiv-mcp = "server:main"
