[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "arxiv-paper-mcp"
version = "0.1.2"
description = "MCP Server Linking arXiv Paper Data to Claude AI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.6.0",
    "requests>=2.0.0",
    "beautifulsoup4>=4.0.0",
    "lxml>=4.0.0"
]

authors = [
    {name = "Park Dahee", email = "dahee.pk@gmail.com"}
]
keywords = ["arxiv", "claude", "ai", "research", "papers"]

[project.scripts]
arxiv-paper-mcp = "arxiv_mcp.server:main"

